<resources>
    <string name="app_name">Borrow Game</string>
    <string name="loading_message_processing">Loading</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Sign up</string>
    <string name="button_sendRegister">Register</string>
    <string name="label_welcome">Welcome!</string>
    <string name="label_mygames">My Games</string>
    <string name="label_myaddress">My Address</string>
    <string name="label_availablegames">Available to Borrow</string>
    <string name="label_user_not_logged">User not logged</string>
    <string name="label_name">Name</string>
    <string name="label_surname">Surname</string>
    <string name="label_streetname">Street Name</string>
    <string name="label_number">Number</string>
    <string name="label_district">District</string>
    <string name="label_state">State</string>
    <string name="label_zipcode">Zip Code</string>
    <string name="button_register_game">Add New Game</string>
    <string name="button_update_game">Change Game Info</string>
    <string name="label_add_new_game">Add New Game</string>
    <string name="label_game_name">Game Name</string>
    <string name="label_game_number_of_players">Number of players</string>
    <string name="label_game_condition">Game condition</string>
    <string-array name="game_condition">
        <item>New</item>
        <item>Good condition</item>
        <item>Used with rasures</item>
    </string-array>
    <string name="label_updating_app">You\'ve got to update your app to continue borrowing!</string>
    <string name="label_update_now">Update Now</string>
    <string name="label_update_later">Update Later</string>
    <string name="label_about_author">Vinicius Viana</string>
    <string name="label_about_text">App developed by only me</string>
    <string name="label_menu_home">Home</string>
    <string name="label_menu_address">Address</string>
    <string name="label_menu_settings">Settings</string>
    <string name="label_about">About</string>
    <string name="label_logout">Logout</string>
    <string name="empty_list_error">There is no Games to list</string>
    <string name="label_players">players</string>
    <string name="label_add_game">Add Game</string>
</resources>