<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_game_text"
        style="@style/text_primary"
        android:layout_marginHorizontal="20dp"
        android:text="@string/label_add_new_game"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/add_game_text">

        <TextView
            style="@style/label_edit_text"
            android:text="@string/label_game_name" />

        <EditText
            android:id="@+id/etGameName"
            style="@style/field_edit_text" />

        <TextView
            style="@style/label_edit_text"
            android:text="@string/label_game_number_of_players" />

        <EditText
            android:id="@+id/etNumberOfPlayers"
            android:inputType="number"
            style="@style/field_edit_text" />

        <TextView
            style="@style/label_edit_text"
            android:text="@string/label_game_condition" />

        <Spinner
            android:id="@+id/game_condition"
            style="@style/field_edit_text"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnRegisterGame"
            style="@style/button"
            android:layout_marginTop="30dp"
            android:text="@string/button_register_game" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>