<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <TextView
            style="@style/label_edit_text"
            android:text="@string/label_welcome" />

        <TextView
            style="@style/label_edit_text"
            android:text="@string/label_email" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            style="@style/label_edit_text"
            android:text="@string/label_password" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btLogin"
            android:text="@string/button_sendRegister"
            style="@style/button"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>